# FasterTransformer

./: .gitignore  CMakeLists.txt  README.md
examples/utils/: hf_detokenize.py  hf_tokenize.py
scripts/: compile.sh  dev-docker.sh  eval_llama.sh  plot_llama.py  plot_llama_compare.py  run_gptj.sh  run_llama.sh
src/fastertransformer/models/manifold-llama/: CMakeLists.txt  Controller.cc  Controller.h  Llama.cc  Llama.h  LlamaContextDecoder.cc  LlamaContextDecoder.h  LlamaDecoder.cc  LlamaDecoder.h  LlamaDecoderLayerWeight.cc  LlamaWeight.cc  LlamaWeight.h
tmp/: manifold_llama-1-2.ini  manifold_llama-1-32.ini  manifold_llama-1-4.ini  manifold_llama-1-512.ini  manifold_llama-128-1.ini  manifold_llama-128-1024.ini  manifold_llama-128-16.ini  manifold_llama-128-2.ini  manifold_llama-128-256.ini  manifold_llama-128-32.ini  manifold_llama-128-4.ini  manifold_llama-128-512.ini  manifold_llama-128-8.ini  manifold_llama-16-1.ini  manifold_llama-16-1024.ini  manifold_llama-16-128.ini  manifold_llama-16-16.ini  manifold_llama-16-2.ini  manifold_llama-16-512.ini  manifold_llama-16-64.ini  manifold_llama-2-1.ini  manifold_llama-2-1024.ini  manifold_llama-2-128.ini  manifold_llama-2-16.ini  manifold_llama-2-256.ini  manifold_llama-2-4.ini  manifold_llama-2-64.ini  manifold_llama-32-1.ini  manifold_llama-32-1024.ini  manifold_llama-32-256.ini  manifold_llama-32-512.ini  manifold_llama-4-1.ini  manifold_llama-4-128.ini  manifold_llama-64-1.ini  manifold_llama-64-256.ini  manifold_llama-64-32.ini  manifold_llama-8-128.ini  manifold_llama-8-2.ini  manifold_llama-8-32.ini  manifold_llama-8-8.ini
tmp/async_4gpu/: manifold_llama-1-8.ini  manifold_llama-128-64.ini  manifold_llama-16-64.ini  manifold_llama-2-2.ini  manifold_llama-32-128.ini  manifold_llama-32-4.ini  manifold_llama-32-512.ini  manifold_llama-64-128.ini  manifold_llama-64-16.ini  manifold_llama-8-1.ini  manifold_llama-8-2.ini
tmp/async_4gpu_a100/: manifold_llama-1-4.ini  manifold_llama-1-512.ini  manifold_llama-128-16.ini  manifold_llama-128-256.ini  manifold_llama-128-32.ini  manifold_llama-128-8.ini  manifold_llama-16-2.ini  manifold_llama-16-32.ini  manifold_llama-2-1.ini  manifold_llama-2-256.ini  manifold_llama-2-64.ini  manifold_llama-32-8.ini  manifold_llama-4-2.ini  manifold_llama-64-1.ini  manifold_llama-8-4.ini
tmp/async_4gpu_v100/: manifold_llama-1-1.ini  manifold_llama-1-128.ini  manifold_llama-1-16.ini  manifold_llama-1-256.ini  manifold_llama-1-64.ini  manifold_llama-128-2.ini  manifold_llama-16-128.ini  manifold_llama-16-256.ini  manifold_llama-2-16.ini  manifold_llama-2-4.ini  manifold_llama-32-1.ini  manifold_llama-32-16.ini  manifold_llama-32-32.ini  manifold_llama-4-1.ini  manifold_llama-4-256.ini  manifold_llama-4-32.ini  manifold_llama-4-8.ini  manifold_llama-64-256.ini  manifold_llama-64-32.ini  manifold_llama-64-4.ini  manifold_llama-64-8.ini  manifold_llama-8-128.ini  manifold_llama-8-512.ini  manifold_llama-8-64.ini
tmp/data/: manifold_llama-1-1.ini  manifold_llama-1-1024.ini  manifold_llama-1-128.ini  manifold_llama-1-16.ini  manifold_llama-1-256.ini  manifold_llama-1-64.ini  manifold_llama-1-8.ini  manifold_llama-128-128.ini  manifold_llama-128-64.ini  manifold_llama-16-256.ini  manifold_llama-16-32.ini  manifold_llama-16-4.ini  manifold_llama-16-8.ini  manifold_llama-2-2.ini  manifold_llama-2-32.ini  manifold_llama-2-512.ini  manifold_llama-2-8.ini  manifold_llama-32-128.ini  (+30 more)
(+49 files in other folders)
